tests/errors/extraneous_arg_type.ceos
_(a: String): Void {
  print(a : String)
}("ASD")
